--- a/openhands/runtime/plugins/vscode/settings.json
+++ b/openhands/runtime/plugins/vscode/settings.json
@@ -1,4 +1,11 @@
 {
-    "workbench.colorTheme": "Default Dark Modern",
-    "workbench.startupEditor": "none"
+  "workbench.colorTheme": "Default Dark Modern",
+  "workbench.startupEditor": "none",
+  "remoteControl.enable": true,
+  "remoteControl.host": "localhost",
+  "remoteControl.port": 3710,
+  "remoteControl.allowCommands": [
+    "vscode.open",
+    "workbench.action.files.openFile"
+  ]
 }
