--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,7 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "vite": "^7.0.5",
-    "vscode-material-icons": "^0.1.1",
+    "vscode-material-icons": "file:vendor/vscode-material-icons",
     "web-vitals": "^5.0.3",
     "ws": "^8.18.2"
   },
@@ -59,7 +59,7 @@
     "dev": "npm run make-i18n && cross-env VITE_MOCK_API=false react-router dev",
     "dev:mock": "npm run make-i18n && cross-env VITE_MOCK_API=true VITE_MOCK_SAAS=false react-router dev",
     "dev:mock:saas": "npm run make-i18n && cross-env VITE_MOCK_API=true VITE_MOCK_SAAS=true react-router dev",
-    "build": "npm run make-i18n && react-router build",
+    "build": "npm run make-i18n && npm run update-icons && react-router build",
     "start": "npx sirv-cli build/ --single",
     "test": "vitest run",
     "test:e2e": "playwright test",
@@ -67,6 +67,10 @@
     "dev_wsl": "VITE_WATCH_USE_POLLING=true vite",
     "preview": "vite preview",
     "make-i18n": "node scripts/make-i18n-translations.cjs",
+    "update-icons": "npm run update-icons:setup && npm run update-icons:fetch && npm run update-icons:copy",
+    "update-icons:setup": "[ \"$INSIDE_DOCKER\" = \"1\" ] && echo 'Skipping icon setup inside Docker (using pre-built icons)' && exit 0 || (command -v git >/dev/null 2>&1 || (echo 'ERROR: git is required for submodule management' && exit 1) && git submodule update --init --recursive || (echo 'ERROR: Failed to initialize vscode-material-icons submodule' && exit 1) && cd vendor/vscode-material-icons && npm install && cd ../../ && npm install ./vendor/vscode-material-icons)",
+    "update-icons:fetch": "cd ./vendor/vscode-material-icons && command -v bun >/dev/null 2>&1 || (echo 'ERROR: bun is required to fetch latest icons. Install bun: https://bun.sh' && exit 1) && npm run fetch-icons && npm run build",
+    "update-icons:copy": "test -d ./vendor/vscode-material-icons/src/lib/generated/icons || (echo 'ERROR: vscode-material-icons submodule not set up or no icons generated. Run: npm run update-icons:setup' && exit 1) && cp -r ./vendor/vscode-material-icons/src/lib/generated/icons/* public/assets/material-icons/",
     "prelint": "npm run make-i18n",
     "lint": "npm run typecheck && eslint src --ext .ts,.tsx,.js && prettier --check src/**/*.{ts,tsx}",
     "lint:fix": "eslint src --ext .ts,.tsx,.js --fix && prettier --write src/**/*.{ts,tsx}",
